# sharkadm-zip-publisher

./: .gitignore  README.md  pyproject.toml  run_app.py
src/sharkadm_zip_publisher/: __init__.py  archive_publisher.py  archive_remover.py  config_publisher.py  exceptions.py  restrict.py  trigger.py  utils.py  zip.py  zip_archive_publishing.py
src/sharkadm_zip_publisher/flet_app/: __init__.py  app.py  constants.py  page_add_archive.py  page_config.py  page_log.py  page_remove_archive.py  page_transformers.py  saves.py  utils.py
